--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,123 +1,48 @@
-* {
-    box-sizing: border-box;
-    
-}
-
-input {
-    margin-left: 20px; 
-    margin-bottom: 10px; 
-}
-
-.inputButton {
-    margin: 0; 
-    
-}
-
-.form-label  {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
-    color: #777777;
-    font-size: 12pt; 
-    margin: 0 5px; 
-}
 
 body {
     background-image: url(../images/gravel.png);
     margin: 1px; 
-    height: 100%; 
+    padding-top: 100px; 
 }
 
 a {
-    text-decoration: none;
-    text-transform: uppercase;
-    text-align: right; 
-    color: black;
+    /* text-decoration: none; */
+    /* text-transform: uppercase; */
+    /* text-align: right;  */
+    /* color: black; */
     font-family: arial, Arial, Helvetica, sans-serif;
-    font-size: 1.3vw; 
+    /* font-size: 1.3vw;  */
 }
 
 a:hover {
     text-decoration: underline; 
 }
 
+
 p {
     font-family: Arial, Helvetica, sans-serif; 
-    color: #777777; 
-    text-align: center; 
-    font-size: 1.5vw; 
-    padding: 5px; 
 }
 
-#biography {
-    text-align: left; 
-    margin-top: 20px; 
-}
-
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
     background-color: #4aaaaf; 
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #ffffff; 
-    padding-left: 5px; 
-    padding-right: 5px; 
-    padding-bottom: 2px; 
-    padding-top: 2px; 
-    font-size: 2.2vw; 
-}
-
-ul, li {
-    display: inline; 
-}
-
-ul { 
-    margin-left: 30%; 
-    
 }
 
 nav {
     border: 1px solid #cccccc; 
-    width: 100%;
+}
+
+.container {
+    border: 10px solid #dddddd; 
     background-color: #ffffff; 
-    position: fixed; 
-    z-index: 10; 
-    
+    padding-top: 10px; 
+    margin-bottom: 75px; 
 }
 
-nav h1, nav h2 {
-     
-    
-    margin-left: 25%;  
-    display: inline-block; 
-    margin-right: auto;
-    margin-bottom: 0; 
-    margin-top: 0; 
-    
+#footerText {
+    padding: 5px; 
 }
-
-nav::after { 
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.blank {
-    width: 25%; 
-    float: left; 
-    margin: 0; 
-}
-
-.name {
-    width: 50%; 
-    margin: 0; 
-}
-
-.links {
-     
-    width: 25%; 
-    float: right; 
-}
-
-    
-/* portfolio styles */
 
 .section-title {
     color: #4aaaaf; 
@@ -125,92 +50,7 @@ nav::after {
     border-bottom: 2px solid #cccccc;
     margin-left: 5px; 
     margin-right: 5px;  
-}
-
-.portfolio::after {
-
-    content: "";
-    display: table;
-    clear: both;
-
-}
-
-.proj-column {
-    width: 45%; 
-    
-}
-
-.l {
-    float: left; 
-}
-
-.r {
-    float: right; 
-}
-
-.row {
-    width: 100%; 
-    margin: 0 auto; 
-    
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-
-.portfolio {
-    width: 50%; 
-    margin: 0 auto; 
-    margin-bottom: 100px; 
-    position: relative; 
-    top: 60px; 
-    border: 10px solid #dddddd; 
-    background-color: #ffffff; 
-    
-}
-
-.contact { 
-    width: 50%; 
-    margin: 0 auto; 
-    position: relative; 
-    top: 60px; 
-    border: 10px solid #dddddd; 
-    background-color: #ffffff; 
-}
-
-.contact::after {
-    display: table; 
-    content: ""; 
-    clear: both; 
-     
-}
-
-#contactbody {
-padding: 5px; 
-}
-
-.portfolio img {
-    width: 100%;
-    padding: 10px; 
-    height: 200px; 
-    }
-
-.proj-box {
-position: relative; 
-}
-
-.proj-text { 
-    position: absolute; 
-    bottom: .01em; 
-    right: 0%; 
-    width: 100%; 
-    padding: 10px; 
-    text-align: center; 
-}
+ }
 
 /* about me styles */ 
 #headshot {
@@ -225,13 +65,11 @@ position: relative;
 }
 
 footer {
-    width: 100%; 
+  
     background-color: #666;
-    position: fixed; 
-    bottom: 0px; 
+   
     border-top: 3px solid #4aaaaf;
-    font-size: 2vw; 
-    margin-top:30px; 
+   
 
 }
 
